--- a/src/elements.html
+++ b/src/elements.html
@@ -19,6 +19,9 @@
 			<div class="col-3">
 				//= template/product-card.html
 			</div>
+			<div class="col-4">
+				//= template/product-card-mini.html
+			</div>
 		</div>
 	</div>
 </div>
