--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 //= template/head.html
 //= template/header.html
 //= template/carousel.html
+//= template/cats.html
+//= template/best-products.html
 
 	<h1>Hello world</h1>
 	
