--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 //= template/carousel.html
 //= template/cats.html
 //= template/best-products.html
+//= template/insta.html
 
 	<h1>Hello world</h1>
 	
