--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
-//= template/head.html
-//= template/header.html
-//= template/carousel.html
-//= template/cats.html
-//= template/best-products.html
-//= template/insta.html
-//= template/footer.html
+@@include('./template/head.html') 
+@@include('./template/header.html') 
+
+@@include('./template/carousel.html') 
+@@include('./template/cats.html') 
+@@include('./template/best-products.html') 
+
+@@include('./template/insta.html') 
+@@include('./template/footer.html') 
