--- a/src/elements.html
+++ b/src/elements.html
@@ -1,4 +1,5 @@
-//= template/head.html
+@@include('./template/head.html')
+@@include('./template/header.html')
 
 <div class="container">
 	<div class="block">
@@ -17,14 +18,14 @@
 	<div class="block">
 		<div class="row">
 			<div class="col-3">
-				//= template/product-card.html
+				@@include('./template/product-card.html')
 			</div>
 			<div class="col-4">
-				//= template/product-card-mini.html
+				@@include('./template/product-card-mini.html')
 			</div>
 		</div>
 	</div>
 </div>
 	
 	
-//= template/footer.html
+@@include('./template/footer.html')
