--- a/src/products.html
+++ b/src/products.html
@@ -8,8 +8,14 @@
 				<h3 class="page-title">Мед</h3>
 			</div>
 			<div class="col-12 col-lg-6 col-xl-6">
-				@@include('./template/weight-selector.html')
-			</div>
+				@@include('./template/weight-selector.html', {
+					'weights': [
+						{'val': 0.5, 'selected': true},
+						{'val': 0.2},
+						{'val': 0.1}
+					]
+				})
+			</div> 
 			@@include('./template/products-line.html') 
 			@@include('./template/products-line.html') 
 			@@include('./template/products-line.html') 
