--- a/src/single-product.html
+++ b/src/single-product.html
@@ -40,7 +40,8 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
 						<div class="buy">
 							@@include('./template/buy-btn.html', {
-								"btntext": "Купить"
+								"btntext": "Купить",
+								"additionClass": "lg"
 							})
 						</div>
 					</div>
