--- a/src/order-form.html
+++ b/src/order-form.html
@@ -4,7 +4,7 @@
 <div class="page-wrap order-form-page">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-lg-6 col-xl-6">
+			<div class="col-12">
 				<h3 class="page-title">БУДЬ ЛАСКА, ЗАПОВНІТЬ КОНТАКТНУ ФОРМУ</h3>
 			</div>
 			<div class="col-12 col-lg-6 col-xl-7">
